src/objects/LI_Opportunity__x.object
<CustomObject>
    <externalDataSource>Legacy_IMS</externalDataSource>
    <externalName>LI Opportunity</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOwnerId_c__c</fullName>
        <externalDeveloperName>AccountOwnerId__c</externalDeveloperName>
        <label>Account Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accrual_Flag_Date_c__c</fullName>
        <externalDeveloperName>Accrual_Flag_Date__c</externalDeveloperName>
        <label>Accrual Flag Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accrual_Flag_Set_By_c__c</fullName>
        <externalDeveloperName>Accrual_Flag_Set_By__c</externalDeveloperName>
        <label>Accrual Flag Set By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accrual_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Accrual_Flag__c</externalDeveloperName>
        <label>Accrual Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acct_Plan_del_c__c</fullName>
        <externalDeveloperName>Acct_Plan_del__c</externalDeveloperName>
        <label>Acct Plan</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accuracy_c__c</fullName>
        <externalDeveloperName>Accuracy__c</externalDeveloperName>
        <label>Probability (Opportunity)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Date_c__c</fullName>
        <externalDeveloperName>Actual_Close_Date__c</externalDeveloperName>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Timestamp_c__c</fullName>
        <externalDeveloperName>Actual_Close_Timestamp__c</externalDeveloperName>
        <label>Actual Close Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Age_from_Creation_c__c</fullName>
        <externalDeveloperName>Age_from_Creation__c</externalDeveloperName>
        <label>Age from Creation</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_c__c</fullName>
        <externalDeveloperName>Agreement__c</externalDeveloperName>
        <label>AgreementDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_In_USD_c__c</fullName>
        <externalDeveloperName>Amount_In_USD__c</externalDeveloperName>
        <label>Amount In USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_New_c__c</fullName>
        <externalDeveloperName>Amount_New__c</externalDeveloperName>
        <label>Amount - New</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Repeat_c__c</fullName>
        <externalDeveloperName>Amount_Repeat__c</externalDeveloperName>
        <label>Amount - Repeat</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <externalDeveloperName>Amount</externalDeveloperName>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovalProcessCountry_c__c</fullName>
        <externalDeveloperName>ApprovalProcessCountry__c</externalDeveloperName>
        <label>Approval Process Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_Functional_Area_c__c</fullName>
        <externalDeveloperName>BH_Functional_Area__c</externalDeveloperName>
        <label>Budget Holder&apos;s Functional Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_Job_Level_c__c</fullName>
        <externalDeveloperName>BH_Job_Level__c</externalDeveloperName>
        <label>Budget Holer&apos;s Job Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_Job_Role_c__c</fullName>
        <externalDeveloperName>BH_Job_Role__c</externalDeveloperName>
        <label>Budget Holder&apos;s Job Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_Job_Title_c__c</fullName>
        <externalDeveloperName>BH_Job_Title__c</externalDeveloperName>
        <label>Budget Holder&apos;s Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BH_Scope_Of_Role_c__c</fullName>
        <externalDeveloperName>BH_Scope_Of_Role__c</externalDeveloperName>
        <label>Budget Holder&apos;s Scope Of Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL_CH_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BL_CH_Flag__c</externalDeveloperName>
        <label>BL-CH Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BL_LBM_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BL_LBM_Flag__c</externalDeveloperName>
        <label>BL-LBM Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BL_MC_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BL_MC_Flag__c</externalDeveloperName>
        <label>BL-MC Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BL_Other_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BL_Other_Flag__c</externalDeveloperName>
        <label>BL-Other Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BL_PO_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BL_PO_Flag__c</externalDeveloperName>
        <label>BL-PO Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BL_SFE_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BL_SFE_Flag__c</externalDeveloperName>
        <label>BL-SFE Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BT_CS_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BT_CS_Flag__c</externalDeveloperName>
        <label>BT-C&amp;S Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BT_IA_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BT_IA_Flag__c</externalDeveloperName>
        <label>BT-I&amp;A Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BUs_in_Scope_c__c</fullName>
        <externalDeveloperName>BUs_in_Scope__c</externalDeveloperName>
        <label>RBUs in Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>United States and Canada</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>North Europe, Middle East &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>Central, East &amp; South Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Team_2_c__c</fullName>
        <externalDeveloperName>Bid_Team_2__c</externalDeveloperName>
        <label>C&amp;S Bid Team 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Team_2_split_c__c</fullName>
        <externalDeveloperName>Bid_Team_2_split__c</externalDeveloperName>
        <label>C&amp;S Bid Team 2 split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Team_3_c__c</fullName>
        <externalDeveloperName>Bid_Team_3__c</externalDeveloperName>
        <label>C&amp;S Bid Team 3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Team_3_split_c__c</fullName>
        <externalDeveloperName>Bid_Team_3_split__c</externalDeveloperName>
        <label>C&amp;S Bid Team 3 split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Team_4_c__c</fullName>
        <externalDeveloperName>Bid_Team_4__c</externalDeveloperName>
        <label>C&amp;S Bid Team 4</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Team_4_split_c__c</fullName>
        <externalDeveloperName>Bid_Team_4_split__c</externalDeveloperName>
        <label>C&amp;S Bid Team 4 split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Team_Lead_c__c</fullName>
        <externalDeveloperName>Bid_Team_Lead__c</externalDeveloperName>
        <label>Bid Team Lead</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Team_Members_c__c</fullName>
        <externalDeveloperName>Bid_Team_Members__c</externalDeveloperName>
        <label># Bid Team Members</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Team_User_c__c</fullName>
        <externalDeveloperName>Bid_Team_User__c</externalDeveloperName>
        <label>Bid Team User</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bid_Team_c__c</fullName>
        <externalDeveloperName>Bid_Team__c</externalDeveloperName>
        <label>Bid Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Launch_c__c</fullName>
        <externalDeveloperName>Brand_Launch__c</externalDeveloperName>
        <label>Brand / Molecule Pre-launch or Recently</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_c__c</fullName>
        <externalDeveloperName>Brand__c</externalDeveloperName>
        <label>Specify Brand / Molecule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetActual_c__c</fullName>
        <externalDeveloperName>BudgetActual__c</externalDeveloperName>
        <label>Budget/Actual</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BudgetForecast_c__c</fullName>
        <externalDeveloperName>BudgetForecast__c</externalDeveloperName>
        <label>Budget/Forecast</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BudgetType_c__c</fullName>
        <externalDeveloperName>BudgetType__c</externalDeveloperName>
        <label>Budget Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TT</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>JKAM</fullName>
                </value>
                <value>
                    <fullName>FDS</fullName>
                </value>
                <value>
                    <fullName>OCL</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Available_Details_c__c</fullName>
        <externalDeveloperName>Budget_Available_Details__c</externalDeveloperName>
        <label>Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Available_c__c</fullName>
        <externalDeveloperName>Budget_Available__c</externalDeveloperName>
        <label>Budget Available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Holder_c__c</fullName>
        <externalDeveloperName>Budget_Holder__c</externalDeveloperName>
        <label>Budget Holder</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type_Name_c__c</fullName>
        <externalDeveloperName>Business_Type_Name__c</externalDeveloperName>
        <label>Business Type Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CEQActiveRelease_c__c</fullName>
        <externalDeveloperName>CEQActiveRelease__c</externalDeveloperName>
        <label>CEQActiveRelease__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CES_Contract_Value_c__c</fullName>
        <externalDeveloperName>CES_Contract_Value__c</externalDeveloperName>
        <label>Commercial Services Contract Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CE_Team_c__c</fullName>
        <externalDeveloperName>CE_Team__c</externalDeveloperName>
        <label>Japan Forecast Position</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Product_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>CS_Product_Flag__c</externalDeveloperName>
        <label>CS Product Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_S_Contract_Value_c__c</fullName>
        <externalDeveloperName>C_S_Contract_Value__c</externalDeveloperName>
        <label>C&amp;S Contract Value</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C_S_Contract_Value_in_USD_c__c</fullName>
        <externalDeveloperName>C_S_Contract_Value_in_USD__c</externalDeveloperName>
        <label>C&amp;S Contract Value in USD</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_S_New_Client_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>C_S_New_Client__c</externalDeveloperName>
        <label>New C&amp;S Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_S_Owners_c__c</fullName>
        <externalDeveloperName>C_S_Owners__c</externalDeveloperName>
        <label>C&amp;S Owners</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Plan_Exist_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Call_Plan_Exist__c</externalDeveloperName>
        <label>Call_Plan_Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignId__c</fullName>
        <externalDeveloperName>CampaignId</externalDeveloperName>
        <label>Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_to_In_Hand_Date_c__c</fullName>
        <externalDeveloperName>Change_to_In_Hand_Date__c</externalDeveloperName>
        <label>Change to In Hand Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Needs_c__c</fullName>
        <externalDeveloperName>Client_Needs__c</externalDeveloperName>
        <label>Client Needs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clone_Type_c__c</fullName>
        <externalDeveloperName>Clone_Type__c</externalDeveloperName>
        <label>Clone Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CloseDateIsChanged_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>CloseDateIsChanged__c</externalDeveloperName>
        <label>IN-Close Date Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <externalDeveloperName>CloseDate</externalDeveloperName>
        <label>Expected Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Remarks_c__c</fullName>
        <externalDeveloperName>Closing_Remarks__c</externalDeveloperName>
        <label>Closing Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commitforboss_c__c</fullName>
        <externalDeveloperName>Commitforboss__c</externalDeveloperName>
        <label>Probability(Product)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compelling_Event_Details_c__c</fullName>
        <externalDeveloperName>Compelling_Event_Details__c</externalDeveloperName>
        <label>Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compelling_Event_c__c</fullName>
        <externalDeveloperName>Compelling_Event__c</externalDeveloperName>
        <label>Compelling Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_c__c</fullName>
        <externalDeveloperName>Contract_End_Date__c</externalDeveloperName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_c__c</fullName>
        <externalDeveloperName>Contract_Signed__c</externalDeveloperName>
        <label>Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date_c__c</fullName>
        <externalDeveloperName>Contract_Start_Date__c</externalDeveloperName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_c__c</fullName>
        <externalDeveloperName>Contract_Term__c</externalDeveloperName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single-Period</fullName>
                </value>
                <value>
                    <fullName>Multi-Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type_c__c</fullName>
        <externalDeveloperName>Contract_Type__c</externalDeveloperName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Master Agreement</fullName>
                </value>
                <value>
                    <fullName>C&amp;S Master Service Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Value_USD_c__c</fullName>
        <externalDeveloperName>Contract_Value_USD__c</externalDeveloperName>
        <label>Contract Value USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_To_USD_c__c</fullName>
        <externalDeveloperName>Conversion_Rate_To_USD__c</externalDeveloperName>
        <label>Conversion Rate To USD</label>
        <precision>14</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentApprovalLevelUK_c__c</fullName>
        <externalDeveloperName>CurrentApprovalLevelUK__c</externalDeveloperName>
        <label>Current Approval Level UK</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentInformation_c_c__c</fullName>
        <externalDeveloperName>CurrentInformation_c__c</externalDeveloperName>
        <label>Current Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrentUserCountry_c__c</fullName>
        <externalDeveloperName>CurrentUserCountry__c</externalDeveloperName>
        <label>Current User Country</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrentUsersRegion_c__c</fullName>
        <externalDeveloperName>CurrentUsersRegion__c</externalDeveloperName>
        <label>Current User Region</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Approval_Level_Status_UK_c__c</fullName>
        <externalDeveloperName>Current_Approval_Level_Status_UK__c</externalDeveloperName>
        <label>Current Approval Level Status UK</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Brand_c__c</fullName>
        <externalDeveloperName>Customer_Brand__c</externalDeveloperName>
        <label>Brand / Molecule Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actemra / RoActemra / Tocilizumab</fullName>
                </value>
                <value>
                    <fullName>Adasuve / Loxapine</fullName>
                </value>
                <value>
                    <fullName>Afatinib</fullName>
                </value>
                <value>
                    <fullName>Afinitor</fullName>
                </value>
                <value>
                    <fullName>Albiglutide</fullName>
                </value>
                <value>
                    <fullName>Alirocumab / PCSK9</fullName>
                </value>
                <value>
                    <fullName>Alogliptin / Nesina / Vipidia</fullName>
                </value>
                <value>
                    <fullName>AMG 145 / Evolocumab</fullName>
                </value>
                <value>
                    <fullName>Anoro</fullName>
                </value>
                <value>
                    <fullName>anti-PDL1</fullName>
                </value>
                <value>
                    <fullName>Apixaban / Eliquis</fullName>
                </value>
                <value>
                    <fullName>Apremilast</fullName>
                </value>
                <value>
                    <fullName>Asimadoline / ONO-3951</fullName>
                </value>
                <value>
                    <fullName>Asunaprevir (PI)</fullName>
                </value>
                <value>
                    <fullName>Avastin / Bevacizumab</fullName>
                </value>
                <value>
                    <fullName>Azilsartan / Edarbi</fullName>
                </value>
                <value>
                    <fullName>Baricitinib</fullName>
                </value>
                <value>
                    <fullName>Basal insulin Peglispro</fullName>
                </value>
                <value>
                    <fullName>Belviq / Lorcaserin</fullName>
                </value>
                <value>
                    <fullName>Bimagrumab</fullName>
                </value>
                <value>
                    <fullName>Bitopertin</fullName>
                </value>
                <value>
                    <fullName>Brilinta / Ticagrelor</fullName>
                </value>
                <value>
                    <fullName>Bydureon / Exenatide</fullName>
                </value>
                <value>
                    <fullName>Canagliflozin / Invokana</fullName>
                </value>
                <value>
                    <fullName>Chimerivax-Dengue, vaccine</fullName>
                </value>
                <value>
                    <fullName>dabrafenib</fullName>
                </value>
                <value>
                    <fullName>Daclatasvir (NS5A)</fullName>
                </value>
                <value>
                    <fullName>Daclizumab</fullName>
                </value>
                <value>
                    <fullName>Dacomitinib</fullName>
                </value>
                <value>
                    <fullName>Desmoteplase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Engagement_Platform_c__c</fullName>
        <externalDeveloperName>Customer_Engagement_Platform__c</externalDeveloperName>
        <label>Commercial Priorities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging Markets</fullName>
                </value>
                <value>
                    <fullName>Launch</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>R&amp;D-Clinical Trial Optimization</fullName>
                </value>
                <value>
                    <fullName>Real World Evidence</fullName>
                </value>
                <value>
                    <fullName>Services/Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle_CL_Count_c__c</fullName>
        <externalDeveloperName>Cycle_CL_Count__c</externalDeveloperName>
        <label>Cycle CL Count</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_CW_Count_c__c</fullName>
        <externalDeveloperName>Cycle_CW_Count__c</externalDeveloperName>
        <label>Cycle CW Count</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_IH_Count_c__c</fullName>
        <externalDeveloperName>Cycle_IH_Count__c</externalDeveloperName>
        <label>Cycle IH Count</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEPT_c__c</fullName>
        <externalDeveloperName>DEPT__c</externalDeveloperName>
        <label>DEPT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I&amp;A</fullName>
                </value>
                <value>
                    <fullName>C&amp;S</fullName>
                </value>
                <value>
                    <fullName>FDS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_in_current_stage_c__c</fullName>
        <externalDeveloperName>Days_in_current_stage__c</externalDeveloperName>
        <label>Days in current stage</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Type_c__c</fullName>
        <externalDeveloperName>Deal_Type__c</externalDeveloperName>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Date_c__c</fullName>
        <externalDeveloperName>Delivery_Date__c</externalDeveloperName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Opp Description/Activity</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DiscountApproverTier_1_c__c</fullName>
        <externalDeveloperName>DiscountApproverTier_1__c</externalDeveloperName>
        <label>Discount Approver Tier 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Requested_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Discount_Approval_Requested__c</externalDeveloperName>
        <label>Discount Approval Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Status_c__c</fullName>
        <externalDeveloperName>Discount_Approval_Status__c</externalDeveloperName>
        <label>Discount Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Rate_c__c</fullName>
        <externalDeveloperName>Doctor_Rate__c</externalDeveloperName>
        <label>Doctor Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Doctor_level_Data_c__c</fullName>
        <externalDeveloperName>Doctor_level_Data__c</externalDeveloperName>
        <label>U.S. Doctor-level Data?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate_Opp_c__c</fullName>
        <externalDeveloperName>Duplicate_Opp__c</externalDeveloperName>
        <label>Duplicate Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>